--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,15 @@
       "@php artisan cache:clear",
       "@php artisan config:clear",
       "@php artisan route:clear"
+    ],
+    "deploy-hostinger": [
+      "composer2 install --optimize-autoloader --no-dev",
+      "@php artisan migrate:fresh --seed",
+      "@php artisan config:cache",
+      "@php artisan route:cache",
+      "@php artisan view:cache",
+      "@php artisan migrate --force",
+      "ln -s storage/app/public public/storage"
     ]
   },
   "extra": {
