--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "graham-campbell/markdown": "^16.0",
     "laravel/framework": "^12.0",
     "laravel/sanctum": "^4.0",
-    "laravel/tinker": "^2.10.1"
+    "laravel/tinker": "^2.10.1",
+    "sendgrid/sendgrid": "^8.1"
   },
   "require-dev": {
     "fakerphp/faker": "^1.23",
