--- a/quasar-frontend/package.json
+++ b/quasar-frontend/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "lodash-es": "^4.17.21",
     "markdown-it": "^14.1.0",
+    "papaparse": "^5.5.3",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.4.0",
     "quasar": "^2.16.0",
