--- a/composer.json
+++ b/composer.json
@@ -71,8 +71,8 @@
       "@php artisan config:cache",
       "@php artisan route:cache",
       "@php artisan view:cache",
-      "@php artisan migrate --force",
-      "ln -s storage/app/public public/storage"
+      "chmod 0744 synlink.sh",
+      "./symlink.sh"
     ]
   },
   "extra": {
