--- a/quasar-frontend/public/.htaccess
+++ b/quasar-frontend/public/.htaccess
@@ -1,8 +1,13 @@
-<IfModule mod_rewrite.c>
-  RewriteEngine On
-  RewriteBase /
-  RewriteRule ^index\.html$ - [L]
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.html [L]
-</IfModule>
+DirectoryIndex index.html
+RewriteEngine On
+
+# 1. Handle static files first
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
+
+# 2. Explicit API routing (must come first)
+RewriteRule ^api/(.*)$ index.php [L]
+
+# 3. All other requests to index.html
+RewriteRule ^ index.html [L]
